--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/jenlpac/employee-tracker#readme",
   "dependencies": {
+    "inquirer": "^7.3.3",
     "mysql2": "^2.2.5"
   }
 }
